# gpui-builder

./: .pre-commit-config.yaml  .rustfmt.toml  COPYRIGHT  Cargo.toml  README.md  component.xml  hierarchy.xml  rust-toolchain.toml  syn.txt
.github/workflows/: pre-commit.yaml
src/: appearance.rs  assets.rs  colors.rs  component_preview.rs  hierarchy.rs  main.rs
src/component/: div.rs  mod.rs  text.rs
src/component/element/: div.rs  mod.rs  property.rs  text.rs
src/component/element_property/: color.rs  mod.rs
src/component/element_property/enum_property/: cursor.rs  display.rs  mod.rs  overflow.rs
src/component/property/: bool_prop.rs  color_prop.rs  float_prop.rs  mod.rs  text_prop.rs
src/component/property/enum_prop/: cursor.rs  display.rs  mod.rs  overflow.rs
src/component/save_load/: conversion.rs  from_serde.rs  mod.rs  rust_export.rs  rust_generator.rs  to_serde.rs
src/ui/: button.rs  checkbox.rs  context_menu.rs  main_view.rs  mod.rs  text_entry.rs  titlebar.rs
src/ui/preview/: active_indicator.rs  component.rs  div.rs  element.rs  mod.rs  panel.rs  text.rs
src/ui/properties_panel/: bool_property.rs  color_property.rs  enum_property.rs  float_property.rs  mod.rs  panel.rs  property.rs  text_property.rs
src/ui/treeview/: context_actions.rs  item.rs  mod.rs  panel.rs
src/ui_components/: main_view.rs  mod.rs  sidebar.rs
src/ui_components/preview/: div.rs  mod.rs
src/ui_components/treeview/: item.rs  mod.rs  panel.rs
